--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+:root {
+    --background-color: #e1e1e1d4
+}
+
 #root,
 .actual-title {
     margin-left: 1.5rem;
@@ -5,7 +9,7 @@
 }
 
 body {
-    background: #e1e1e1d4 !important;
+    background: var(--background-color) !important;
 }
 
 nav {
@@ -47,4 +51,28 @@ hr.fade {
 
 .page-link {
     user-select: none;
+}
+
+a {
+    color: var(--mdb-gray-dark) !important;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Fundo do scrollbar */
+::-webkit-scrollbar-track {
+    background: #f5f5f5;
+}
+
+/* Alça do scrollbar */
+::-webkit-scrollbar-thumb {
+    background: var(--mdb-gray-500);
+    border-radius: 5px;
+}
+
+/* Hover na alça do scrollbar */
+::-webkit-scrollbar-thumb:hover {
+    background: #a6a6a6;
 }
