--- a/public/css/products-style.css
+++ b/public/css/products-style.css
@@ -1,4 +1,3 @@
-
 .text, .card h2 {
     text-transform: uppercase;
     font-family: Inter, serif;
@@ -14,15 +13,15 @@
     justify-content: space-between;
 }
 
-.card-container .best-sellers {
+.card-container {
     justify-content: center !important;
     align-content: flex-start !important;
 }
 
 .card {
-    width: calc(25% - 20px);
+    width: calc(20% - 20px);
     margin: 10px;
-    background-color: #f0f0f0;
+    background-color: #f0f0f0 !important;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -47,21 +46,15 @@ a h3 {
     color: #666;
 }
 
-@media (max-width: 768px) {
-    .card {
-        width: 100%;
-    }
-}
-
 .active>.page-link,.page-link.active {
     color: var(--mdb-white) !important;
     background-color: var(--mdb-dark) !important;
     border-color: var(--mdb-dark) !important;
 }
 
-#products { width: 75%; }
+#products { width: 80%; }
 
-#filters { width: 25%; }
+#filters { width: 20%; }
 
 #filters, #products { padding: 20px }
 
@@ -80,6 +73,7 @@ a h3 {
 .list-collapse {
     max-height: 35vh;
     overflow: auto;
+    border-bottom: 1px solid var(--background-color);
 }
 
 .filters-items {
@@ -89,4 +83,39 @@ a h3 {
 #btn-clear {
     background-color: var(--mdb-gray-300);
     color: #000;
+}
+
+.form-check-input:checked {
+    border-color: var(--mdb-gray-dark) !important;
+}
+
+.form-check-input[type=radio]:checked:after {
+    border-color: var(--mdb-gray-dark) !important;;
+    background-color: var(--mdb-gray-dark) !important;;
+}
+
+.form-check-input[type=checkbox]:checked {
+    background-color: var(--mdb-gray-dark) !important;
+}
+
+.form-check-input:focus:before {
+    box-shadow: 0 0 0 0 !important;
+    transform: none !important;
+    transition: none !important;
+}
+
+.form-check-label {
+    user-select: none;
+}
+
+@media (max-width: 1400px) {
+    #products { width: 75%; }
+
+    #filters { width: 25%; }
+}
+
+@media (max-width: 768px) {
+    .card {
+        width: 100%;
+    }
 }
