--- a/public/css/products-show-style.css
+++ b/public/css/products-show-style.css
@@ -49,7 +49,7 @@ td, th {
     position: absolute;
     z-index: 9999999;
     right: 10px;
-    top: 10px;
+    top: 4.5rem;
     background: var(--mdb-gray-dark);
     color: white;
 }
